# Erudite

./: README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  Dockerfile_pw  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  run_pathway_server.py
backend/agents/: expand_graph.py  orchestrator.py  requirements.txt  tools.py
backend/agents/agentic_pipelines/: all_retriever.py  expand_graph.py  retriever_agent_template.py  semantic_scholar_agent.py  web_search_agent.py
backend/agents/llm/: llm_caller.py  llm_utils.py
backend/agents/utils/: text_chunking.py  timing.py
backend/auth/: models.py  router.py  service.py
backend/auth/db/: schema.sql
backend/data_sources/: README.md  __init__.py  all_retriever.py  news.py  retriever_template.py  youtube.py
backend/knowledge_graphs/: models.py  router.py
backend/knowledge_graphs/db/: schema.sql
backend/llm/: __init__.py  llm_caller.py  llm_utils.py
backend/pipelines/: __init__.py  generate_knowledge_graph.py
backend/prompts/: agentic_system_prompt.txt  article_generator.txt  query_expander.txt  query_expander_with_context.txt  topic_generator.txt
ui/: .eslintrc.json  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
ui/src/: middleware.ts
ui/src/app/: globals.css  layout.tsx
ui/src/app/(sidebar)/: page.tsx
ui/src/app/agent/: page.tsx
ui/src/components/: agent-thoughts.tsx  doc-renderer.tsx  force-graph.tsx  llm-input.tsx  llm-sidebar.tsx  main-logo.tsx  sidebar.tsx
ui/src/components/ui/: auth-form.tsx  loading-status.tsx
(+12 files in other folders)
