[project]
name = "backend"
version = "0.1.0"
description = "Backend for Knowledge Graph API"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-jose",
    "passlib",
    "python-dotenv",
    "bcrypt",
    "pytest",
    "httpx"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
